Secure frontend with SCP header and XSS protection (#4260)